feat: 支持视频识别、干员识别

--- a/zh-Hans.lproj/Localizable.strings
+++ b/zh-Hans.lproj/Localizable.strings
@@ -88,6 +88,7 @@
 "ConnectFailed" = "连接失败";
 "TryToStartEmulator" = "正在尝试启动模拟器";
 "CheckSettings" = "请检查连接设置或尝试重启电脑";
+"Save to %@" = "保存至：%@";
 
 // MARK: - RecruitView
 
