feat: 增加对萨米肉鸽刷隐藏坍缩范式模式的支持

--- a/Resources/zh-Hans.lproj/Localizable.strings
+++ b/Resources/zh-Hans.lproj/Localizable.strings
@@ -90,6 +90,7 @@
 "TryToStartEmulator" = "正在尝试启动模拟器";
 "CheckSettings" = "请检查连接设置或尝试重启电脑";
 "Save to %@" = "保存至：%@";
+"GainParadigm %@" = "坍缩范式加深：%@";
 
 // MARK: - RecruitView
 
