feat: implement NSLocalizedString

--- a/Resources/zh-Hans.lproj/Localizable.strings
+++ b/Resources/zh-Hans.lproj/Localizable.strings
@@ -95,3 +95,145 @@
 // MARK: - RecruitView
 
 "RecruitmentRecognitionTip" = "小提示：和主界面的自动公招是两个独立的功能，\n请手动打开游戏公招 Tags 界面后使用～";
+
+"连接设置"="连接设置";
+"游戏设置"="游戏设置";
+"更新设置"="更新设置";
+"系统设置"="系统设置";
+"客户端类型："="客户端类型：";
+"阻止系统睡眠"="阻止系统睡眠";
+"接收开发版更新"="接收开发版更新";
+"自动检查更新"="自动检查更新";
+"自动下载更新"="自动下载更新";
+"指挥分队"="指挥分队";
+"取长补短"="取长补短";
+"招聘许可"="招聘许可";
+"龙门币"="龙门币";
+"加急许可"="加急许可";
+"家具零件"="家具零件";
+"荧光棒"="荧光棒";
+"不支持此版本 PlayCover"="不支持此版本 PlayCover";
+"肉鸽主题："="肉鸽主题：";
+"策略："="策略：";
+"最多探索次数："="最多探索次数：";
+"投资源石锭"="投资源石锭";
+"刷新商店（指路鳞）"="刷新商店（指路鳞）";
+"储备源石锭达到上限时停止"="储备源石锭达到上限时停止";
+"最多投资源石锭数量："="最多投资源石锭数量：";
+"开局分队："="开局分队：";
+"信用购物"="信用购物";
+"信用溢出时无视黑名单"="信用溢出时无视黑名单";
+"借助战赚信用"="借助战赚信用";
+"优先购买"="优先购买";
+"黑名单"="黑名单";
+"已启用"="已启用";
+"未启用"="未启用";
+"无人机用途："="无人机用途：";
+"自动刷新3星Tags"="自动刷新3星Tags";
+"自动使用加急许可"="自动使用加急许可";
+"领取每日/每周任务奖励"="领取每日/每周任务奖励";
+"领取所有邮件奖励"="领取所有邮件奖励";
+"进行每日免费单抽"="进行每日免费单抽";
+"领取幸运墙合成玉奖励"="领取幸运墙合成玉奖励";
+"领取限时开采许可合成玉奖励"="领取限时开采许可合成玉奖励";
+"领取五周年赠送月卡奖励"="领取五周年赠送月卡奖励";
+"请在“设置” > “游戏设置” 中选择客户端类型。"="请在“设置” > “游戏设置” 中选择客户端类型。";
+"自动启动客户端"="自动启动客户端";
+"主题："="主题：";
+"策略："="策略：";
+"支援道具："="支援道具：";
+"组装批次数："="组装批次数：";
+"组装数量增加模式："="组装数量增加模式：";
+"关卡名"="关卡名";
+"关卡选择"="关卡选择";
+"当前/上次"="当前/上次";
+"请从边栏选择功能"="请从边栏选择功能";
+"内置作业"="内置作业";
+"外部作业（可拖入文件）"="外部作业（可拖入文件）";
+"移除"="移除";
+"移除作业"="移除作业";
+"停止"="停止";
+"停止"="停止";
+"开始"="开始";
+"开始"="开始";
+"删除"="删除";
+"删除任务"="删除任务";
+"停止"="停止";
+"停止"="停止";
+"开始"="开始";
+"开始"="开始";
+"设置"="设置";
+"显示/隐藏边栏"="显示/隐藏边栏";
+"显示/隐藏边栏"="显示/隐藏边栏";
+"请选择识别项目"="请选择识别项目";
+"停止"="停止";
+"停止"="停止";
+"开始"="开始";
+"开始"="开始";
+"请选择内容项目"="请选择内容项目";
+"添加"="添加";
+"添加任务"="添加任务";
+"任务"="任务";
+"检查更新…"="检查更新…";
+"打开日志文件夹…"="打开日志文件夹…";
+"PlayCover 链接…"="PlayCover 链接…";
+"请打开“自动战斗”页，将攻略视频文件拖入外部作业列表即可。"="请打开“自动战斗”页，将攻略视频文件拖入外部作业列表即可。";
+"文件格式错误"="文件格式错误";
+"自动编队"="自动编队";
+"信赖干员"="信赖干员";
+"循环次数"="循环次数";
+"装备："="装备：";
+"SSS_约翰老妈新建地块"="SSS_约翰老妈新建地块";
+"自动设置时间"="自动设置时间";
+"自动选择 Tags："="自动选择 Tags：";
+"3星"="3星";
+"4星"="4星";
+"5星"="5星";
+"6星"="6星";
+"预备干员-近战"="预备干员-近战";
+"预备干员-术师"="预备干员-术师";
+"预备干员-后勤"="预备干员-后勤";
+"预备干员-狙击"="预备干员-狙击";
+"预备干员-重装"="预备干员-重装";
+"郁金香"="郁金香";
+"阿米娅-WARRIOR"="阿米娅-WARRIOR";
+"复制结果JSON至剪贴板："="复制结果JSON至剪贴板：";
+"企鹅物流"="企鹅物流";
+"明日方舟工具箱"="明日方舟工具箱";
+"开始任务"="开始任务";
+"停止任务"="停止任务";
+"全部启用"="全部启用";
+"全部取消"="全部取消";
+"新增定时"="新增定时";
+"允许阻止系统睡眠"="允许阻止系统睡眠";
+"允许"="允许";
+"取消"="取消";
+"时"="时";
+"分"="分";
+"开启"="开启";
+"时间"="时间";
+"信息"="信息";
+"现在"="现在";
+"自动滚动到底部"="自动滚动到底部";
+"请注意，这是真的抽卡！不是模拟！！！"="请注意，这是真的抽卡！不是模拟！！！";
+"我已知晓，继续"="我已知晓，继续";
+"寻访一次"="寻访一次";
+"寻访十次"="寻访十次";
+"  在罗德岛竟然有这么多志同道合的志士。是的，诗歌！战争！自由！能在历史的洪流中汇集众人的力量，为这片大地的改变而奋斗。真是令人振奋！这些悲壮又非凡的故事，是应当被传颂下去的。"="  在罗德岛竟然有这么多志同道合的志士。是的，诗歌！战争！自由！能在历史的洪流中汇集众人的力量，为这片大地的改变而奋斗。真是令人振奋！这些悲壮又非凡的故事，是应当被传颂下去的。";
+"保佑胜利的英雄，我将领受你们的祝福。"="保佑胜利的英雄，我将领受你们的祝福。";
+"伟大的战士们啊，我会在你们身边，与你们一同奋勇搏杀。"="伟大的战士们啊，我会在你们身边，与你们一同奋勇搏杀。";
+"再转身回头的时候，我们将带着胜利归来。"="再转身回头的时候，我们将带着胜利归来。";
+"不需畏惧，我们会战胜那些鲁莽的家伙！"="不需畏惧，我们会战胜那些鲁莽的家伙！";
+"欢呼吧！"="欢呼吧！";
+"来吧——"="来吧——";
+"现在可没有后悔的余地了。"="现在可没有后悔的余地了。";
+"无需退路。"="无需退路。";
+"英雄们啊，为这最强大的信念，请站在我们这边。"="英雄们啊，为这最强大的信念，请站在我们这边。";
+"颤抖吧，在真正的勇敢面前。"="颤抖吧，在真正的勇敢面前。";
+"哭嚎吧，为你们不堪一击的信念。"="哭嚎吧，为你们不堪一击的信念。";
+"你将在此跪拜。"="你将在此跪拜。";
+"是吗，我们做到了吗......我现在，正体会至高的荣誉和幸福。"="是吗，我们做到了吗......我现在，正体会至高的荣誉和幸福。";
+"转身吧，勇士们。我们已经获得了完美的胜利，现在是该回去享受庆祝的盛典了。"="转身吧，勇士们。我们已经获得了完美的胜利，现在是该回去享受庆祝的盛典了。";
+"听啊，悲鸣停止了。这是幸福的和平到来前的宁静。"="听啊，悲鸣停止了。这是幸福的和平到来前的宁静。";
+"纵使人类的战争没尽头......在这一刻，我们守护住了自己生的尊严。离开吧。但要昂首挺胸。"="纵使人类的战争没尽头......在这一刻，我们守护住了自己生的尊严。离开吧。但要昂首挺胸。";
+"这对角可能会不小心撞倒些家具，我会尽量小心。"="这对角可能会不小心撞倒些家具，我会尽量小心。";
