--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -326,6 +326,186 @@
         }
       }
     },
+    "GachaInitTip" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "在罗德岛竟然有这么多志同道合的志士。是的，诗歌！战争！自由！能在历史的洪流中汇集众人的力量，为这片大地的改变而奋斗。真是令人振奋！这些悲壮又非凡的故事，是应当被传颂下去的。"
+          }
+        }
+      }
+    },
+    "GachaTip1" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "保佑胜利的英雄，我将领受你们的祝福。"
+          }
+        }
+      }
+    },
+    "GachaTip2" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "伟大的战士们啊，我会在你们身边，与你们一同奋勇搏杀。"
+          }
+        }
+      }
+    },
+    "GachaTip3" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "再转身回头的时候，我们将带着胜利归来。"
+          }
+        }
+      }
+    },
+    "GachaTip4" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "不需畏惧，我们会战胜那些鲁莽的家伙！"
+          }
+        }
+      }
+    },
+    "GachaTip5" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "欢呼吧！"
+          }
+        }
+      }
+    },
+    "GachaTip6" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "来吧——"
+          }
+        }
+      }
+    },
+    "GachaTip7" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "现在可没有后悔的余地了。"
+          }
+        }
+      }
+    },
+    "GachaTip8" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "无需退路。"
+          }
+        }
+      }
+    },
+    "GachaTip9" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "英雄们啊，为这最强大的信念，请站在我们这边。"
+          }
+        }
+      }
+    },
+    "GachaTip10" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "颤抖吧，在真正的勇敢面前。"
+          }
+        }
+      }
+    },
+    "GachaTip11" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "哭嚎吧，为你们不堪一击的信念。"
+          }
+        }
+      }
+    },
+    "GachaTip12" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "你将在此跪拜。"
+          }
+        }
+      }
+    },
+    "GachaTip13" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "是吗，我们做到了吗……我现在，正体会至高的荣誉和幸福。"
+          }
+        }
+      }
+    },
+    "GachaTip14" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "转身吧，勇士们。我们已经获得了完美的胜利，现在是该回去享受庆祝的盛典了。"
+          }
+        }
+      }
+    },
+    "GachaTip15" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "听啊，悲鸣停止了。这是幸福的和平到来前的宁静。"
+          }
+        }
+      }
+    },
+    "GachaTip16" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "纵使人类的战争没尽头……在这一刻，我们守护住了自己生的尊严。离开吧。但要昂首挺胸。"
+          }
+        }
+      }
+    },
+    "GachaTip17" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "这对角可能会不小心撞倒些家具，我会尽量小心。"
+          }
+        }
+      }
+    },
     "GainParadigm %@" : {
       "localizations" : {
         "zh-Hans" : {
