--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -213,6 +213,9 @@
         }
       }
     },
+    "Bilibili服" : {
+
+    },
     "CA-5" : {
       "localizations" : {
         "zh-Hans" : {
@@ -1575,6 +1578,9 @@
     "不购物" : {
 
     },
+    "不选择" : {
+
+    },
     "专享月卡" : {
 
     },
@@ -1973,6 +1979,9 @@
     "周常任务" : {
 
     },
+    "国际服（YoStarEN）" : {
+
+    },
     "基建工作心情阈值: %.0f%%" : {
 
     },
@@ -2003,6 +2012,9 @@
 
     },
     "如果长时间连接不上或出错，请尝试下载使用“文件” > “PlayCover链接…”中的最新版本" : {
+
+    },
+    "官服" : {
 
     },
     "实用工具" : {
@@ -2284,6 +2296,9 @@
     "日志文件出错: %@" : {
 
     },
+    "日服（YoStarJP）" : {
+
+    },
     "时" : {
       "localizations" : {
         "ko" : {
@@ -2521,6 +2536,9 @@
           }
         }
       }
+    },
+    "繁中服（txwy）" : {
+
     },
     "组装批次数：" : {
       "localizations" : {
@@ -2846,6 +2864,9 @@
 
     },
     "需要视频分辨率为 16:9，且无黑边、模拟器边框、异形屏矫正等干扰因素。" : {
+
+    },
+    "韩服（YoStarKR）" : {
 
     },
     "领取五周年赠送月卡奖励" : {
