feat: Mirror酱资源更新

--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -242,6 +242,9 @@
         }
       }
     },
+    "CDK" : {
+      "shouldTranslate" : false
+    },
     "CE-6" : {
       "localizations" : {
         "zh-Hans" : {
@@ -880,6 +883,9 @@
         }
       }
     },
+    "GitHub" : {
+      "shouldTranslate" : false
+    },
     "HasInvested %lld UnitTime" : {
       "localizations" : {
         "ko" : {
@@ -963,6 +969,16 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "已使用理智药 %1$lld(+%2$lld) 次"
+          }
+        }
+      }
+    },
+    "MirrorChyan" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Mirror酱"
           }
         }
       }
@@ -2015,6 +2031,9 @@
     "外部资源版本：%@\n更新时间：%@" : {
 
     },
+    "好" : {
+
+    },
     "如果长时间连接不上或出错，请尝试下载使用“文件” > “PlayCover链接…”中的最新版本" : {
 
     },
@@ -2257,6 +2276,9 @@
     "方案：" : {
 
     },
+    "无下载链接，请检查CDK" : {
+
+    },
     "无人机用途：" : {
       "localizations" : {
         "ko" : {
@@ -2285,7 +2307,10 @@
     "无限吃48小时内过期的理智药" : {
 
     },
-    "无需使用外部更新资源" : {
+    "无需更新" : {
+
+    },
+    "无需更新资源" : {
 
     },
     "日常任务" : {
@@ -2371,9 +2396,6 @@
           }
         }
       }
-    },
-    "未找到外部更新资源" : {
-
     },
     "未拥有干员：%lld" : {
 
@@ -2813,6 +2835,9 @@
     "资源更新…" : {
 
     },
+    "资源更新来源" : {
+
+    },
     "运行日志" : {
 
     },
@@ -2852,6 +2877,9 @@
 
     },
     "重新加载文件" : {
+
+    },
+    "重新打开应用后生效。" : {
 
     },
     "阻止系统睡眠" : {
