feat: 自动资源更新

--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -1987,6 +1987,9 @@
     "可以使用非好友助战" : {
 
     },
+    "可能需要设置系统代理。" : {
+
+    },
     "吃源石" : {
 
     },
@@ -2708,6 +2711,9 @@
           }
         }
       }
+    },
+    "自动资源更新" : {
+
     },
     "自动选择 Tags：" : {
       "localizations" : {
