--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -1579,6 +1579,9 @@
     "不使用无人机" : {
 
     },
+    "不切换" : {
+
+    },
     "不加急" : {
 
     },
@@ -2453,6 +2456,9 @@
         }
       }
     },
+    "添加…" : {
+
+    },
     "添加任务" : {
       "localizations" : {
         "ko" : {
@@ -2505,6 +2511,9 @@
 
     },
     "生息演算" : {
+
+    },
+    "登录名" : {
 
     },
     "视频作业" : {
@@ -2822,6 +2831,9 @@
           }
         }
       }
+    },
+    "账号切换" : {
+
     },
     "购物" : {
 
