--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -1744,6 +1744,9 @@
     "傀影" : {
 
     },
+    "傀影与猩红血钻" : {
+
+    },
     "储备源石锭达到上限时停止" : {
 
     },
@@ -1858,6 +1861,12 @@
     "最高难度" : {
 
     },
+    "凹开局" : {
+
+    },
+    "凹开局，然后凹开局奖励" : {
+
+    },
     "凹开局干员精二直升" : {
 
     },
@@ -1909,6 +1918,9 @@
     "制造站-赤金" : {
 
     },
+    "刷分/奖励点数，尽可能稳定地打更多层数" : {
+
+    },
     "刷分与建造点" : {
 
     },
@@ -1921,9 +1933,6 @@
     "刷坍缩范式，尽可能地积累坍缩值" : {
 
     },
-    "刷开局，到达第三层后直接退出" : {
-
-    },
     "刷新商店（指路鳞）" : {
       "localizations" : {
         "ko" : {
@@ -1934,13 +1943,16 @@
         }
       }
     },
+    "刷月度小队，尽可能稳定地打更多层数" : {
+
+    },
+    "刷深入调查，尽可能稳定地打更多层数" : {
+
+    },
     "刷源石锭，第一层投资完就退出" : {
 
     },
     "刷理智" : {
-
-    },
-    "刷等级，尽可能稳定地打更多层数" : {
 
     },
     "刷赤金" : {
@@ -2233,6 +2245,9 @@
     "按住加号按钮" : {
 
     },
+    "探索者的银凇止境" : {
+
+    },
     "接收开发版更新" : {
       "localizations" : {
         "ko" : {
@@ -2390,6 +2405,9 @@
         }
       }
     },
+    "月度小队" : {
+
+    },
     "有存档，通过组装支援道具刷生息点数，组装完成后将会跳到下一个量定日并读取前一个量定日的存档" : {
 
     },
@@ -2440,10 +2458,16 @@
     "水月" : {
 
     },
+    "水月与深蓝之树" : {
+
+    },
     "沙中之火" : {
 
     },
     "沙洲遗闻" : {
+
+    },
+    "深入调查" : {
 
     },
     "添加" : {
@@ -2489,9 +2513,6 @@
 
     },
     "点击加号按钮" : {
-
-    },
-    "烧开水" : {
 
     },
     "现在" : {
@@ -2741,6 +2762,9 @@
 
     },
     "萨卡兹" : {
+
+    },
+    "萨卡兹的无终奇语" : {
 
     },
     "萨米" : {
