feat: 肉鸽投资模式刷分

--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -2229,6 +2229,9 @@
     "打开自定义排班文件夹…" : {
 
     },
+    "投资模式启用购物、招募、进二层" : {
+
+    },
     "投资源石锭" : {
       "localizations" : {
         "ko" : {
