refactor: 其他配置定义

--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -1967,6 +1967,9 @@
     "办公室" : {
 
     },
+    "加工站" : {
+
+    },
     "加急" : {
       "localizations" : {
         "ko" : {
@@ -2793,6 +2796,9 @@
       }
     },
     "触控模式" : {
+
+    },
+    "训练室" : {
 
     },
     "设置" : {
