feat: 添加肉鸽配置

--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -1610,6 +1610,9 @@
     "专享月卡" : {
 
     },
+    "主题" : {
+
+    },
     "主题：" : {
       "localizations" : {
         "ko" : {
@@ -1672,6 +1675,9 @@
 
     },
     "使用 Gzip 压缩有可能会出现内存泄漏，非测试用途建议关闭。" : {
+
+    },
+    "使用密文板" : {
 
     },
     "信息" : {
@@ -1841,33 +1847,19 @@
     "内置资源版本：%@\n更新时间：%@" : {
 
     },
-    "最多投资源石锭数量：" : {
-      "localizations" : {
-        "ko" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "최대 오리지늄 주괴 투자 수："
-          }
-        }
-      }
+    "最多投资数量" : {
+
     },
-    "最多探索次数：" : {
-      "localizations" : {
-        "ko" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "최대 탐험 횟수："
-          }
-        }
-      }
+    "最多探索次数" : {
+
     },
     "最高难度" : {
 
     },
-    "凹开局" : {
+    "凹2构想开局" : {
 
     },
-    "凹开局，然后凹开局奖励" : {
+    "凹开局" : {
 
     },
     "凹开局干员精二直升" : {
@@ -1882,6 +1874,9 @@
           }
         }
       }
+    },
+    "分队开局密文板" : {
+
     },
     "初始化失败: %@" : {
 
@@ -1933,7 +1928,13 @@
     "刷坍缩" : {
 
     },
-    "刷坍缩范式，尽可能地积累坍缩值" : {
+    "刷坍缩范式，遇到非稀有坍缩范式后重开" : {
+
+    },
+    "刷开局，刷取热水壶或精二干员开局" : {
+
+    },
+    "刷开局启用购物" : {
 
     },
     "刷新商店（指路鳞）" : {
@@ -1946,13 +1947,13 @@
         }
       }
     },
-    "刷月度小队，尽可能稳定地打更多层数" : {
+    "刷月度小队，到达第五层后直接退出" : {
 
     },
     "刷深入调查，尽可能稳定地打更多层数" : {
 
     },
-    "刷源石锭，第一层投资完就退出" : {
+    "刷源石锭，到达第二层后直接退出" : {
 
     },
     "刷理智" : {
@@ -2002,7 +2003,7 @@
         }
       }
     },
-    "只凹直升不作战" : {
+    "只凹直升不凹其他" : {
 
     },
     "可以使用非好友助战" : {
@@ -2132,6 +2133,9 @@
     "已拥有干员：%lld" : {
 
     },
+    "希望" : {
+
+    },
     "干员列表" : {
 
     },
@@ -2177,20 +2181,13 @@
     "开始唤醒" : {
 
     },
-    "开局分队：" : {
-      "localizations" : {
-        "ko" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "시작 분대："
-          }
-        }
-      }
-    },
-    "开局干员（单个）：" : {
+    "开局分队" : {
 
     },
-    "开局职业组：" : {
+    "开局干员（单个）" : {
+
+    },
+    "开局职业组" : {
 
     },
     "当前/上次" : {
@@ -2204,6 +2201,9 @@
       }
     },
     "当前难度" : {
+
+    },
+    "待刷坍缩范式" : {
 
     },
     "循环次数" : {
@@ -2235,7 +2235,7 @@
     "打开自定义排班文件夹…" : {
 
     },
-    "投资模式启用购物、招募、进二层" : {
+    "投资后进二层" : {
 
     },
     "投资源石锭" : {
@@ -2420,6 +2420,12 @@
     "月度小队" : {
 
     },
+    "月度小队自动切换" : {
+
+    },
+    "月度小队通讯" : {
+
+    },
     "有存档，通过组装支援道具刷生息点数，组装完成后将会跳到下一个量定日并读取前一个量定日的存档" : {
 
     },
@@ -2439,6 +2445,9 @@
     "未知排班" : {
 
     },
+    "构想" : {
+
+    },
     "查找日志…" : {
 
     },
@@ -2454,6 +2463,9 @@
           }
         }
       }
+    },
+    "检测获取的坍缩范式" : {
+
     },
     "次" : {
 
@@ -2480,6 +2492,9 @@
 
     },
     "深入调查" : {
+
+    },
+    "深度调查自动切换" : {
 
     },
     "添加" : {
@@ -2524,10 +2539,22 @@
     "源石碎片自动补货" : {
 
     },
+    "源石锭" : {
+
+    },
     "满级后自动停止" : {
 
     },
     "点击加号按钮" : {
+
+    },
+    "烧水分队" : {
+
+    },
+    "烧水奖励" : {
+
+    },
+    "热水壶" : {
 
     },
     "现在" : {
@@ -2550,6 +2577,9 @@
 
     },
     "登录名" : {
+
+    },
+    "盾" : {
 
     },
     "视频作业" : {
@@ -2580,6 +2610,9 @@
           }
         }
       }
+    },
+    "策略" : {
+
     },
     "策略：" : {
       "localizations" : {
@@ -2633,19 +2666,6 @@
           }
         }
       }
-    },
-    "肉鸽主题：" : {
-      "localizations" : {
-        "ko" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "로그라이크 테마："
-          }
-        }
-      }
-    },
-    "肉鸽难度：" : {
-
     },
     "自动下载更新" : {
       "localizations" : {
@@ -2774,6 +2794,9 @@
 
     },
     "自定义排班" : {
+
+    },
+    "英文分号隔开" : {
 
     },
     "萨卡兹" : {
@@ -2942,6 +2965,9 @@
     "重新打开应用后生效。" : {
 
     },
+    "钥匙" : {
+
+    },
     "阻止系统睡眠" : {
       "localizations" : {
         "ko" : {
@@ -2953,6 +2979,12 @@
       }
     },
     "限时开采许可" : {
+
+    },
+    "随机奖励" : {
+
+    },
+    "难度" : {
 
     },
     "需要视频分辨率为 16:9，且无黑边、模拟器边框、异形屏矫正等干扰因素。" : {
@@ -3013,6 +3045,9 @@
           }
         }
       }
+    },
+    "骰子" : {
+
     },
     "黑名单" : {
       "localizations" : {
