feat: 肉鸽配置新参数 (#37)

--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -1570,6 +1570,9 @@
         }
       }
     },
+    "一层远见密文板" : {
+
+    },
     "一键长草" : {
 
     },
@@ -1605,6 +1608,9 @@
 
     },
     "专享月卡" : {
+
+    },
+    "主题" : {
 
     },
     "主题：" : {
@@ -1669,6 +1675,9 @@
 
     },
     "使用 Gzip 压缩有可能会出现内存泄漏，非测试用途建议关闭。" : {
+
+    },
+    "使用密文板" : {
 
     },
     "信息" : {
@@ -1742,6 +1751,9 @@
       }
     },
     "傀影" : {
+
+    },
+    "傀影与猩红血钻" : {
 
     },
     "储备源石锭达到上限时停止" : {
@@ -1835,27 +1847,19 @@
     "内置资源版本：%@\n更新时间：%@" : {
 
     },
-    "最多投资源石锭数量：" : {
-      "localizations" : {
-        "ko" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "최대 오리지늄 주괴 투자 수："
-          }
-        }
-      }
+    "最多投资数量" : {
+
     },
-    "最多探索次数：" : {
-      "localizations" : {
-        "ko" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "최대 탐험 횟수："
-          }
-        }
-      }
+    "最多探索次数" : {
+
     },
     "最高难度" : {
+
+    },
+    "凹2构想开局" : {
+
+    },
+    "凹开局" : {
 
     },
     "凹开局干员精二直升" : {
@@ -1870,6 +1874,9 @@
           }
         }
       }
+    },
+    "分队开局密文板" : {
+
     },
     "初始化失败: %@" : {
 
@@ -1909,6 +1916,9 @@
     "制造站-赤金" : {
 
     },
+    "刷分/奖励点数，尽可能稳定地打更多层数" : {
+
+    },
     "刷分与建造点" : {
 
     },
@@ -1918,10 +1928,13 @@
     "刷坍缩" : {
 
     },
-    "刷坍缩范式，尽可能地积累坍缩值" : {
+    "刷坍缩范式，遇到非稀有坍缩范式后重开" : {
 
     },
-    "刷开局，到达第三层后直接退出" : {
+    "刷开局，刷取热水壶或精二干员开局" : {
+
+    },
+    "刷开局启用购物" : {
 
     },
     "刷新商店（指路鳞）" : {
@@ -1934,13 +1947,16 @@
         }
       }
     },
-    "刷源石锭，第一层投资完就退出" : {
+    "刷月度小队，到达第五层后直接退出" : {
+
+    },
+    "刷深入调查，尽可能稳定地打更多层数" : {
+
+    },
+    "刷源石锭，到达第二层后直接退出" : {
 
     },
     "刷理智" : {
-
-    },
-    "刷等级，尽可能稳定地打更多层数" : {
 
     },
     "刷赤金" : {
@@ -1950,6 +1966,9 @@
 
     },
     "办公室" : {
+
+    },
+    "加工站" : {
 
     },
     "加急" : {
@@ -1984,7 +2003,7 @@
         }
       }
     },
-    "只凹直升不作战" : {
+    "只凹直升不凹其他" : {
 
     },
     "可以使用非好友助战" : {
@@ -2006,6 +2025,9 @@
 
     },
     "国际服（YoStarEN）" : {
+
+    },
+    "在第五层BOSS前暂停" : {
 
     },
     "基建工作心情阈值: %.0f%%" : {
@@ -2111,6 +2133,9 @@
     "已拥有干员：%lld" : {
 
     },
+    "希望" : {
+
+    },
     "干员列表" : {
 
     },
@@ -2156,20 +2181,13 @@
     "开始唤醒" : {
 
     },
-    "开局分队：" : {
-      "localizations" : {
-        "ko" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "시작 분대："
-          }
-        }
-      }
-    },
-    "开局干员（单个）：" : {
+    "开局分队" : {
 
     },
-    "开局职业组：" : {
+    "开局干员（单个）" : {
+
+    },
+    "开局职业组" : {
 
     },
     "当前/上次" : {
@@ -2183,6 +2201,9 @@
       }
     },
     "当前难度" : {
+
+    },
+    "待刷坍缩范式" : {
 
     },
     "循环次数" : {
@@ -2214,6 +2235,9 @@
     "打开自定义排班文件夹…" : {
 
     },
+    "投资后进二层" : {
+
+    },
     "投资源石锭" : {
       "localizations" : {
         "ko" : {
@@ -2231,6 +2255,9 @@
 
     },
     "按住加号按钮" : {
+
+    },
+    "探索者的银凇止境" : {
 
     },
     "接收开发版更新" : {
@@ -2390,6 +2417,15 @@
         }
       }
     },
+    "月度小队" : {
+
+    },
+    "月度小队自动切换" : {
+
+    },
+    "月度小队通讯" : {
+
+    },
     "有存档，通过组装支援道具刷生息点数，组装完成后将会跳到下一个量定日并读取前一个量定日的存档" : {
 
     },
@@ -2409,6 +2445,9 @@
     "未知排班" : {
 
     },
+    "构想" : {
+
+    },
     "查找日志…" : {
 
     },
@@ -2425,6 +2464,9 @@
         }
       }
     },
+    "检测获取的坍缩范式" : {
+
+    },
     "次" : {
 
     },
@@ -2440,10 +2482,19 @@
     "水月" : {
 
     },
+    "水月与深蓝之树" : {
+
+    },
     "沙中之火" : {
 
     },
     "沙洲遗闻" : {
+
+    },
+    "深入调查" : {
+
+    },
+    "深度调查自动切换" : {
 
     },
     "添加" : {
@@ -2488,10 +2539,22 @@
     "源石碎片自动补货" : {
 
     },
+    "源石锭" : {
+
+    },
+    "满级后自动停止" : {
+
+    },
     "点击加号按钮" : {
 
     },
-    "烧开水" : {
+    "烧水分队" : {
+
+    },
+    "烧水奖励" : {
+
+    },
+    "热水壶" : {
 
     },
     "现在" : {
@@ -2514,6 +2577,9 @@
 
     },
     "登录名" : {
+
+    },
+    "盾" : {
 
     },
     "视频作业" : {
@@ -2544,6 +2610,9 @@
           }
         }
       }
+    },
+    "策略" : {
+
     },
     "策略：" : {
       "localizations" : {
@@ -2597,19 +2666,6 @@
           }
         }
       }
-    },
-    "肉鸽主题：" : {
-      "localizations" : {
-        "ko" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "로그라이크 테마："
-          }
-        }
-      }
-    },
-    "肉鸽难度：" : {
-
     },
     "自动下载更新" : {
       "localizations" : {
@@ -2743,6 +2799,9 @@
     "萨卡兹" : {
 
     },
+    "萨卡兹的无终奇语" : {
+
+    },
     "萨米" : {
 
     },
@@ -2757,6 +2816,9 @@
       }
     },
     "触控模式" : {
+
+    },
+    "训练室" : {
 
     },
     "设置" : {
@@ -2900,6 +2962,9 @@
     "重新打开应用后生效。" : {
 
     },
+    "钥匙" : {
+
+    },
     "阻止系统睡眠" : {
       "localizations" : {
         "ko" : {
@@ -2911,6 +2976,12 @@
       }
     },
     "限时开采许可" : {
+
+    },
+    "随机奖励" : {
+
+    },
+    "难度" : {
 
     },
     "需要视频分辨率为 16:9，且无黑边、模拟器边框、异形屏矫正等干扰因素。" : {
@@ -2971,6 +3042,9 @@
           }
         }
       }
+    },
+    "骰子" : {
+
     },
     "黑名单" : {
       "localizations" : {
