docs: PlayCover分辨率提示

--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -2851,6 +2851,9 @@
         }
       }
     },
+    "请将PlayCover的分辨率设置为1280x720、分辨率缩放设置为1.0。" : {
+
+    },
     "请打开“自动战斗”页，将攻略视频文件拖入外部作业列表即可。" : {
       "localizations" : {
         "ko" : {
