1. 增加了根据日期显示当日开放的资源收集关卡的功能 2. 新增简体中文SK-5到碳-5的翻译

--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -1330,6 +1330,17 @@
         }
       }
     },
+    "SK-5" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "碳-5"
+          }
+        }
+      }
+    },
     "SSSGamePass" : {
       "localizations" : {
         "ko" : {
@@ -2644,9 +2655,6 @@
         }
       }
     },
-    "繁中服（txwy）" : {
-
-    },
     "组装批次数：" : {
       "localizations" : {
         "ko" : {
@@ -2666,6 +2674,9 @@
           }
         }
       }
+    },
+    "繁中服（txwy）" : {
+
     },
     "自动下载更新" : {
       "localizations" : {
