增加下载作业集功能

--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -1579,6 +1579,9 @@
     "下载作业" : {
 
     },
+    "下载作业集" : {
+
+    },
     "不使用无人机" : {
 
     },
@@ -2644,9 +2647,6 @@
         }
       }
     },
-    "繁中服（txwy）" : {
-
-    },
     "组装批次数：" : {
       "localizations" : {
         "ko" : {
@@ -2666,6 +2666,9 @@
           }
         }
       }
+    },
+    "繁中服（txwy）" : {
+
     },
     "自动下载更新" : {
       "localizations" : {
