增加本地化字段

--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -1580,7 +1580,20 @@
 
     },
     "下载作业集" : {
-
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Download Copilot Set"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "下载作业集"
+          }
+        }
+      }
     },
     "不使用无人机" : {
 
