chore: 更多API报错信息

--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -934,6 +934,9 @@
         }
       }
     },
+    "IP请求频率过快，请稍后再试" : {
+
+    },
     "LabelsRefreshed" : {
       "localizations" : {
         "ko" : {
@@ -2644,9 +2647,6 @@
         }
       }
     },
-    "繁中服（txwy）" : {
-
-    },
     "组装批次数：" : {
       "localizations" : {
         "ko" : {
@@ -2666,6 +2666,9 @@
           }
         }
       }
+    },
+    "繁中服（txwy）" : {
+
     },
     "自动下载更新" : {
       "localizations" : {
@@ -2830,6 +2833,9 @@
           }
         }
       }
+    },
+    "访问被禁止，请检查IP或CDK" : {
+
     },
     "请从边栏选择功能" : {
       "localizations" : {
