feat: 争锋频道：青草城

--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -1626,6 +1626,9 @@
         }
       }
     },
+    "争锋频道：青草城" : {
+
+    },
     "仓库材料" : {
 
     },
@@ -2030,6 +2033,9 @@
     "国际服（YoStarEN）" : {
 
     },
+    "在活动主界面（右下角有“加入赛事”处）开始任务。" : {
+
+    },
     "在第五层BOSS前暂停" : {
 
     },
@@ -2122,6 +2128,9 @@
           }
         }
       }
+    },
+    "小游戏" : {
+
     },
     "已启用" : {
       "localizations" : {
@@ -2230,6 +2239,9 @@
       }
     },
     "手动确认1星" : {
+
+    },
+    "手动跳过教程对话，然后可以直接退出" : {
 
     },
     "手动输入关卡名" : {
@@ -2925,6 +2937,9 @@
 
     },
     "资源更新来源" : {
+
+    },
+    "跟着鸭总喝口汤" : {
 
     },
     "运行日志" : {
