--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -1629,6 +1629,9 @@
     "争锋频道：青草城" : {
 
     },
+    "从剪贴板读取" : {
+
+    },
     "仓库材料" : {
 
     },
@@ -2974,7 +2977,7 @@
     "退出" : {
 
     },
-    "选择本地文件…" : {
+    "选择本地文件" : {
 
     },
     "邮件" : {
