feat: add AUTO for series option
modified seriesBattles binding to handle the new AUTO (1000) and disabled (-1) states

added a picker for battle series configuration with options: AUTO, 1-6, and "不使用" (disabled)

给 mac 版加入自动连战次数的功能，将输入框更改为选择框，如果选择不使用则 config.series 传 -1

--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -70,6 +70,12 @@
     "1-7" : {
       "shouldTranslate" : false
     },
+    "2" : {
+
+    },
+    "3" : {
+
+    },
     "3星" : {
       "localizations" : {
         "ko" : {
@@ -83,6 +89,9 @@
     "3星设置7:40而非9:00" : {
 
     },
+    "4" : {
+
+    },
     "4星" : {
       "localizations" : {
         "ko" : {
@@ -93,6 +102,9 @@
         }
       }
     },
+    "5" : {
+
+    },
     "5星" : {
       "localizations" : {
         "ko" : {
@@ -102,6 +114,9 @@
           }
         }
       }
+    },
+    "6" : {
+
     },
     "6星" : {
       "localizations" : {
@@ -164,6 +179,9 @@
           }
         }
       }
+    },
+    "AUTO" : {
+
     },
     "BattleFormation: %@" : {
       "localizations" : {
@@ -1580,6 +1598,9 @@
 
     },
     "下载作业" : {
+
+    },
+    "不使用" : {
 
     },
     "不使用无人机" : {
