--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -1632,6 +1632,9 @@
     "争锋频道：青草城" : {
 
     },
+    "从剪贴板读取" : {
+
+    },
     "仓库材料" : {
 
     },
@@ -3017,12 +3020,12 @@
     "韩服（YoStarKR）" : {
 
     },
-    "领取五周年赠送月卡奖励" : {
+    "领取周年庆赠送月卡奖励" : {
       "localizations" : {
         "ko" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "5주년 기념 월간 카드 보상 수령"
+            "value" : "주년 기념 월간 카드 보상 수령"
           }
         }
       }
