--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -1683,6 +1683,9 @@
     "会客室" : {
 
     },
+    "会客室信息板收取信用" : {
+
+    },
     "使用 adb-lite 连接" : {
 
     },
@@ -2030,9 +2033,6 @@
     "吃理智药" : {
 
     },
-    "启用自定义基建配置(beta)" : {
-
-    },
     "周常任务" : {
 
     },
@@ -2049,6 +2049,9 @@
 
     },
     "基建换班" : {
+
+    },
+    "基建模式" : {
 
     },
     "复制结果JSON至剪贴板：" : {
@@ -2152,6 +2155,9 @@
 
     },
     "希望" : {
+
+    },
+    "常规模式" : {
 
     },
     "干员列表" : {
@@ -2327,21 +2333,14 @@
         }
       }
     },
-    "方案：" : {
+    "方案" : {
 
     },
     "无下载链接，请检查CDK" : {
 
     },
-    "无人机用途：" : {
-      "localizations" : {
-        "ko" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "드론 용도："
-          }
-        }
-      }
+    "无人机用途" : {
+
     },
     "无存档，通过进出关卡刷生息点数" : {
 
@@ -2588,7 +2587,7 @@
         }
       }
     },
-    "班次：" : {
+    "班次" : {
 
     },
     "理智药" : {
@@ -2814,6 +2813,9 @@
     "自定义" : {
 
     },
+    "自定义基建配置" : {
+
+    },
     "自定义排班" : {
 
     },
@@ -2837,6 +2839,9 @@
       }
     },
     "触控模式" : {
+
+    },
+    "训练完成后继续尝试专精当前技能" : {
 
     },
     "训练室" : {
@@ -2993,6 +2998,9 @@
 
     },
     "钥匙" : {
+
+    },
+    "队列轮换" : {
 
     },
     "阻止系统睡眠" : {
