feat: update all views for the copilot list

--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -367,6 +367,26 @@
         }
       }
     },
+    "CopilotListCompleted" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "自动战斗列表已全部完成！"
+          }
+        }
+      }
+    },
+    "CopilotListError" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "自动战斗列表出错，已停止执行后续任务"
+          }
+        }
+      }
+    },
     "CurrentStage %@" : {
       "localizations" : {
         "ko" : {
@@ -488,6 +508,15 @@
           }
         }
       }
+    },
+    "Failed to decode CopilotListConfiguration from saved data." : {
+
+    },
+    "Failed to encode CopilotListConfiguration: %@" : {
+
+    },
+    "Failed to serialize CopilotListConfiguration to string." : {
+
     },
     "FailedToOpenClient" : {
       "localizations" : {
@@ -1582,6 +1611,12 @@
     "下载作业" : {
 
     },
+    "下载失败: %@" : {
+
+    },
+    "下载成功: %@" : {
+
+    },
     "不使用" : {
 
     },
@@ -1787,6 +1822,9 @@
     "允许使用 Gzip" : {
 
     },
+    "允许使用理智药" : {
+
+    },
     "允许阻止系统睡眠" : {
       "localizations" : {
         "ko" : {
@@ -1798,6 +1836,9 @@
       }
     },
     "免费单抽" : {
+
+    },
+    "全局设置" : {
 
     },
     "全部取消" : {
@@ -1832,6 +1873,9 @@
           }
         }
       }
+    },
+    "关卡名不能为空" : {
+
     },
     "关卡选择" : {
       "localizations" : {
@@ -1891,6 +1935,12 @@
       }
     },
     "分队开局密文板" : {
+
+    },
+    "切换到战斗列表模式" : {
+
+    },
+    "切换回单个作业模式" : {
 
     },
     "初始化失败: %@" : {
@@ -2083,6 +2133,9 @@
     "如果长时间连接不上或出错，请尝试下载使用“文件” > “PlayCover链接…”中的最新版本" : {
 
     },
+    "完成关卡：%@" : {
+
+    },
     "官服" : {
 
     },
@@ -2154,6 +2207,9 @@
     "已拥有干员：%lld" : {
 
     },
+    "已添加到战斗列表" : {
+
+    },
     "希望" : {
 
     },
@@ -2202,7 +2258,13 @@
         }
       }
     },
+    "开始关卡：%@" : {
+
+    },
     "开始唤醒" : {
+
+    },
+    "开始添加任务到战斗列表" : {
 
     },
     "开局分队" : {
@@ -2250,6 +2312,15 @@
         }
       }
     },
+    "战斗出错：%@" : {
+
+    },
+    "战斗列表" : {
+
+    },
+    "战斗列表（自动模式）" : {
+
+    },
     "手动确认1星" : {
 
     },
@@ -2260,6 +2331,9 @@
 
     },
     "打开自定义排班文件夹…" : {
+
+    },
+    "找不到关卡 '%@' 的地图数据，请更新资源" : {
 
     },
     "投资后进二层" : {
@@ -2372,9 +2446,6 @@
     "日常任务定时执行会在系统休眠之后失效, 打开此功能可以阻止系统自动睡眠" : {
 
     },
-    "日志" : {
-
-    },
     "日志文件出错: %@" : {
 
     },
@@ -2421,6 +2492,9 @@
         }
       }
     },
+    "普通模式" : {
+
+    },
     "更新失败：%@" : {
 
     },
@@ -2460,6 +2534,9 @@
       }
     },
     "未拥有干员：%lld" : {
+
+    },
+    "未添加到战斗列表" : {
 
     },
     "未知排班" : {
@@ -2511,6 +2588,9 @@
     "沙洲遗闻" : {
 
     },
+    "没有启用的战斗列表任务" : {
+
+    },
     "深入调查" : {
 
     },
@@ -2541,6 +2621,22 @@
       }
     },
     "添加作业" : {
+
+    },
+    "添加关卡：%@ %@" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "添加关卡：%1$@ %2$@"
+          }
+        }
+      }
+    },
+    "添加关卡失败：%@" : {
+
+    },
+    "添加到战斗列表" : {
 
     },
     "游戏设置" : {
@@ -2630,6 +2726,12 @@
           }
         }
       }
+    },
+    "突袭" : {
+
+    },
+    "突袭模式" : {
+
     },
     "策略" : {
 
@@ -2951,9 +3053,6 @@
 
     },
     "跟着鸭总喝口汤" : {
-
-    },
-    "运行日志" : {
 
     },
     "进行每日免费单抽" : {
