fix: remove MAAUseCopilotList persistence
removed MAAUseCopilotList persistence and show RegularCopilotList by default on startup

移除了 MAAUseCopilotList 的持久化，应用启动默认展示 RegularCopilotList

--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -1611,10 +1611,10 @@
     "下载作业" : {
 
     },
-    "下载失败: %@" : {
+    "下载失败：%@" : {
 
     },
-    "下载成功: %@" : {
+    "下载成功：%@" : {
 
     },
     "不使用" : {
