feat: 资源更新后自动重新加载

--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -2427,7 +2427,7 @@
     "更新失败：%@" : {
 
     },
-    "更新完成，请重新启动应用" : {
+    "更新完成" : {
 
     },
     "更新设置" : {
@@ -2984,9 +2984,6 @@
           }
         }
       }
-    },
-    "退出" : {
-
     },
     "选择本地文件…" : {
 
