--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -1629,6 +1629,9 @@
         }
       }
     },
+    "了解如何开发相关功能，可以访问[远程控制功能开发者文档](https://maa.plus/docs/zh-cn/protocol/integration.html)" : {
+
+    },
     "争锋频道：青草城" : {
 
     },
@@ -2265,6 +2268,16 @@
     "打开自定义排班文件夹…" : {
 
     },
+    "执行远端任务 %@ 失败: %@" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "执行远端任务 %1$@ 失败: %2$@"
+          }
+        }
+      }
+    },
     "投资后进二层" : {
 
     },
@@ -2277,6 +2290,9 @@
           }
         }
       }
+    },
+    "报告任务状态失败: %@" : {
+
     },
     "指定材料" : {
 
@@ -2468,6 +2484,9 @@
     "未知排班" : {
 
     },
+    "未知的远端任务类型: %@" : {
+
+    },
     "构想" : {
 
     },
@@ -2508,10 +2527,22 @@
     "水月与深蓝之树" : {
 
     },
+    "汇报任务端点" : {
+
+    },
     "沙中之火" : {
 
     },
     "沙洲遗闻" : {
+
+    },
+    "注意：随意填入未知来源的地址可能会导致您的账户受到损失。" : {
+
+    },
+    "测试中..." : {
+
+    },
+    "测试连接" : {
 
     },
     "深入调查" : {
@@ -2599,10 +2630,16 @@
     "生息演算" : {
 
     },
+    "用户标识符" : {
+
+    },
     "登录名" : {
 
     },
     "盾" : {
+
+    },
+    "确定" : {
 
     },
     "视频作业" : {
@@ -2822,6 +2859,9 @@
     "自定义排班" : {
 
     },
+    "获取任务端点" : {
+
+    },
     "萨卡兹" : {
 
     },
@@ -2848,6 +2888,9 @@
 
     },
     "训练室" : {
+
+    },
+    "设备标识符（只读）" : {
 
     },
     "设置" : {
@@ -2956,6 +2999,9 @@
     "跟着鸭总喝口汤" : {
 
     },
+    "轮询间隔 (ms)" : {
+
+    },
     "运行日志" : {
 
     },
@@ -2969,10 +3015,22 @@
         }
       }
     },
+    "远程控制" : {
+
+    },
     "连战次数" : {
 
     },
     "连接地址" : {
+
+    },
+    "连接地址已更新为: %@" : {
+
+    },
+    "连接测试失败" : {
+
+    },
+    "连接测试成功" : {
 
     },
     "连接设置" : {
@@ -2995,6 +3053,9 @@
 
     },
     "重新打开应用后生效。" : {
+
+    },
+    "重新生成" : {
 
     },
     "钥匙" : {
