feat: implement user_additional param

--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -1868,7 +1868,10 @@
         }
       }
     },
-    "关卡数据获取失败: %@" : {
+    "关卡名不能为空" : {
+
+    },
+    "关卡资源获取失败: %@" : {
 
     },
     "关卡选择" : {
@@ -2213,6 +2216,9 @@
     "干员列表" : {
 
     },
+    "干员名" : {
+
+    },
     "干员寻访" : {
 
     },
@@ -2328,6 +2334,9 @@
 
     },
     "找不到关卡 '%@' 的地图数据，请更新资源" : {
+
+    },
+    "技能" : {
 
     },
     "投资后进二层" : {
@@ -3074,6 +3083,15 @@
           }
         }
       }
+    },
+    "追加低信赖干员" : {
+
+    },
+    "追加自定干员" : {
+
+    },
+    "退出" : {
+
     },
     "选择本地文件…" : {
 
