--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -1871,7 +1871,7 @@
     "关卡名不能为空" : {
 
     },
-    "关卡资源获取失败: %@" : {
+    "关卡数据获取失败: %@" : {
 
     },
     "关卡选择" : {
@@ -3088,9 +3088,6 @@
 
     },
     "追加自定干员" : {
-
-    },
-    "退出" : {
 
     },
     "选择本地文件…" : {
