chore: Change string for JieGarden

--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -2138,6 +2138,9 @@
     "小游戏" : {
 
     },
+    "岁的界园志异" : {
+
+    },
     "已启用" : {
       "localizations" : {
         "ko" : {
@@ -2593,7 +2596,7 @@
     "生息演算" : {
 
     },
-    "界园志异" : {
+    "界园" : {
 
     },
     "登录名" : {
